# mtl-ddex-flatfilevalidator

./: .gitignore  README.md  pyproject.toml
mtl_ddex_flatfilevalidator/: dsrf_conf_checker.py
